--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,3 +1,18 @@
-// Place all the styles related to the Tasks controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400');
+
+body {
+  font-family: Roboto;
+  font-weight: 300;
+  padding: 0 24px;
+}
+h1 {
+  font-weight: 400;
+  padding: 15px 0;
+}
+.details {
+  background-color: #dfdfdf;
+  padding: 15px;
+  border-color: #8b8b8b;
+  margin-bottom: 15px;
+
+}
